2001-09-02  Bruno Haible  <haible@clisp.cons.org>

	* signalblocking.m4: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2001-09-08  Bruno Haible  <haible@clisp.cons.org>

	* javacomp.m4: New file.
	* javaexec.m4: New file.
	* Makefile.am (EXTRA_DIST): Add them.

2001-09-06  Bruno Haible  <haible@clisp.cons.org>

	* setenv.m4: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2001-09-02  Bruno Haible  <haible@clisp.cons.org>

	* mkdtemp.m4: New file.
	* tmpdir.m4: New file.
	* Makefile.am (EXTRA_DIST): Add them.

2001-09-03  Bruno Haible  <haible@clisp.cons.org>

	* flex.m4: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2001-07-22  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_GNU_GETTEXT): Remove computation of CATALOGS.
	(AM_WITH_NLS): Compute ALL_LINGUAS, GMOFILES, POFILES, CATALOGS while
	creating po/Makefile from po/Makefile.in. Remove computation of
	GMOFILES, POFILES during configure.

2001-07-22  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_WITH_NLS): Simplify the logic. Use the same tests
	for MSGFMT and XGETTEXT in the case we use a preinstalled GNU libintl
	and in the case of using the included libintl.

2001-06-30  Bruno Haible  <haible@clisp.cons.org>

	* stdbool.m4: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2001-06-10  Bruno Haible  <haible@clisp.cons.org>

	* ssize_t.m4: New file.
	* unionwait.m4: New file.
	* Makefile.am (EXTRA_DIST): Add them.

2001-09-13  Bruno Haible  <haible@clisp.cons.org>

	* gettext-0.10.40 released.

2001-09-13  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_WITH_NLS): Change version determination of bison, so
	that it also works with bison-1.29.
	Reported by Karl Berry <karl@gnu.org>.

2001-07-24  Bruno Haible  <haible@clisp.cons.org>

	* gettext-0.10.39 released.

2001-06-25  Bruno Haible  <haible@clisp.cons.org>

	* mbswidth.m4: Also check for mbsinit. Needed for SCO 3.2v5.0.2.

2001-06-14  Bruno Haible  <haible@clisp.cons.org>
