@@ -1,3 +1,9 @@
+2001-08-12  Jim Meyering  <meyering@lucent.com>
+
+	* mbrtowc.m4: Quote first arg of AC_DEFUN.
+	* mbstate_t.m4: Likewise.
+	* mbswidth.m4: Likewise.
+
 2001-09-02  Bruno Haible  <haible@clisp.cons.org>
 
 	* signalblocking.m4: New file.
